Bug 711602 - Fix "ASSERTION: bad size recorded" with CloseOnShutdown. r=bsmedberg